fix(assigned-groups): set z-index to ensure content is visible above background

--- a/src/app/pages/user/assigned-groups/assigned-groups.less
+++ b/src/app/pages/user/assigned-groups/assigned-groups.less
@@ -17,3 +17,18 @@
     background-repeat: no-repeat;
     z-index: -1;
 }
+
+.groups-list {
+  position: relative;
+  z-index: 1;
+}
+
+.empty-state,
+.loading {
+    position: relative;
+    z-index: 1;
+    text-align: center;
+    font-weight: 500;
+    font-size: 1.2rem;
+    margin-top: 2rem;
+}
